--- a/main.css
+++ b/main.css
@@ -27,7 +27,7 @@
 
 .container {
     width: 390px;
-    height: 440px;
+    height: auto;
     border-radius: 15px;
     background-color: var(--primaryColor);
     padding-top: 20px;
@@ -52,7 +52,6 @@
     outline: none;
     border: none;
     background-color: var(--secondaryColor);
-    /* color: #0000; */
     border-radius: 20px;
     padding: 0px 20px;
 }
@@ -81,4 +80,25 @@
 
 .weather h2 {
     font-size: 3rem;
+}
+
+.details {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 15px;
+    padding-bottom: 30px;
+    font-size: 20px;
+}
+
+.col {
+    display: flex;
+    align-items: center;
+    text-align: left;
+    color: var(--secondaryColor);
+}
+
+.col>img {
+    height: 35px;
+    margin-right: 10px;
 }
