--- a/main.css
+++ b/main.css
@@ -9,6 +9,31 @@
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond&family=Poppins:wght@300;400&display=swap');
 
 
+.animate-container {
+    background-image: url(images/snowingbg.gif);
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.animate-container button {
+    height: 40px;
+    width: 200px;
+    border-radius: 5px;
+    border: none;
+    font-size: 18px;
+    font-weight: 700;
+    cursor: pointer;
+    background-color: var(--secondaryColor);
+    color: var(--primaryColor);
+}
+
+
+
+
 :root {
     --primaryColor: #0C356A;
     --secondaryColor: #fff;
@@ -75,7 +100,7 @@
 }
 
 .weather img {
-    height: 140px;
+    height: 160px;
 }
 
 .weather h2 {
@@ -101,4 +126,10 @@
 .col>img {
     height: 35px;
     margin-right: 10px;
+}
+
+
+div:where(.swal2-container) button:where(.swal2-styled).swal2-confirm {
+    background-color: var(--primaryColor) !important;
+    width: 200px;
 }
