--- a/main.css
+++ b/main.css
@@ -45,7 +45,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 603px;
 }
 
 
@@ -140,7 +140,7 @@ div:where(.swal2-container) button:where(.swal2-styled).swal2-confirm {
 @media only screen and (max-width: 600px) {
 
     .main-container {
-        height: auto;
+        height: 100vh !important;
     }
 
     .container {
