--- a/main.css
+++ b/main.css
@@ -45,7 +45,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 603px;
+    height: 100vh;
 }
 
 
@@ -138,10 +138,6 @@ div:where(.swal2-container) button:where(.swal2-styled).swal2-confirm {
 
 
 @media only screen and (max-width: 600px) {
-
-    .main-container {
-        height: 100vh !important;
-    }
 
     .container {
         width: 85%;
